Added integration tests that cover detector update scenarios
Mostly cover the scenarios related with rule and monitor updates

Updated integration tests when executing detectors to check and assert the findings

Signed-off-by: Stevan Buzejic <stevan.buzejic@htecgroup.com>