@@ -4,8 +4,6 @@
  */
 package org.opensearch.securityanalytics.resthandler;
 
-import static org.opensearch.securityanalytics.TestHelpers.productIndexMapping;
-import static org.opensearch.securityanalytics.TestHelpers.productIndexMaxAggRule;
 import static org.opensearch.securityanalytics.TestHelpers.randomAggregationRule;
 import static org.opensearch.securityanalytics.TestHelpers.randomDetector;
 import static org.opensearch.securityanalytics.TestHelpers.randomDetectorType;
@@ -13,7 +11,6 @@ import static org.opensearch.securityanalytics.TestHelpers.randomDetectorWithInp
 import static org.opensearch.securityanalytics.TestHelpers.randomDoc;
 import static org.opensearch.securityanalytics.TestHelpers.randomIndex;
 import static org.opensearch.securityanalytics.TestHelpers.randomRule;
-import static org.opensearch.securityanalytics.TestHelpers.sumAggregationTestRule;
 import static org.opensearch.securityanalytics.TestHelpers.windowsIndexMapping;
 
 import java.io.IOException;
@@ -21,9 +18,10 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 import org.apache.http.HttpStatus;
 import org.junit.Assert;
@@ -49,7 +47,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
      * 4. Verifies the findings
      * @throws IOException
      */
-    public void testUpdateDetectorAddingAggregationRuleRemovingDocLevelRule() throws IOException {
+    public void testRemoveDocLevelRuleAddAggregationRules_verifyFindings_success() throws IOException {
         String index = createTestIndex(randomIndex(), windowsIndexMapping());
 
         // Execute CreateMappingsAction to add alias mapping for index
@@ -63,16 +61,14 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         );
 
         Response createMappingResponse = client().performRequest(createMappingRequest);
+
         assertEquals(HttpStatus.SC_OK, createMappingResponse.getStatusLine().getStatusCode());
 
         Detector detector = randomDetector(getRandomPrePackagedRules());
 
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
-        Assert.assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
 
-        Map<String, Object> responseBody = asMap(createResponse);
-
-        String detectorId = responseBody.get("_id").toString();
+        assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
 
         String request = "{\n" +
             "   \"query\" : {\n" +
@@ -81,8 +77,11 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
             "   }\n" +
             "}";
         SearchResponse response = executeSearchAndGetResponse(DetectorMonitorConfig.getRuleIndex(randomDetectorType()), request, true);
-        Assert.assertEquals(5, response.getHits().getTotalHits().value);
 
+        assertEquals(5, response.getHits().getTotalHits().value);
+
+        Map<String, Object> responseBody = asMap(createResponse);
+        String detectorId = responseBody.get("_id").toString();
         request = "{\n" +
             "   \"query\" : {\n" +
             "     \"match\":{\n" +
@@ -96,10 +95,13 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         SearchHit hit = hits.get(0);
         Map<String, Object> detectorAsMap = (Map<String, Object>) hit.getSourceAsMap().get("detector");
         List<String> monitorIds = (List<String>) (detectorAsMap).get("monitor_id");
-        Assert.assertEquals(1, monitorIds.size());
+
+        assertEquals(1, monitorIds.size());
+
         String monitorId = monitorIds.get(0);
         String monitorType  = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId))).get("monitor")).get("monitor_type");
-        Assert.assertEquals(MonitorType.DOC_LEVEL_MONITOR.getValue(), monitorType);
+
+        assertEquals(MonitorType.DOC_LEVEL_MONITOR.getValue(), monitorType);
 
         // Create aggregation rules
         String sumRuleId = createRule(randomAggregationRule( "sum", " > 2"));
@@ -110,27 +112,23 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         Detector updatedDetector = randomDetectorWithInputs(List.of(input));
 
         Response updateResponse = makeRequest(client(), "PUT", SecurityAnalyticsPlugin.DETECTOR_BASE_URI + "/" + detectorId, Collections.emptyMap(), toHttpEntity(updatedDetector));
-        Assert.assertEquals("Update detector failed", RestStatus.OK, restStatus(updateResponse));
-        Map updateResponseBody = asMap(updateResponse);
-        detectorId = updateResponseBody.get("_id").toString();
 
-        request = "{\n" +
-            "   \"query\" : {\n" +
-            "     \"match\":{\n" +
-            "        \"_id\": \"" + detectorId + "\"\n" +
-            "     }\n" +
-            "   }\n" +
-            "}";
+        assertEquals("Update detector failed", RestStatus.OK, restStatus(updateResponse));
+
+        Map<String, Object> updateResponseBody = asMap(updateResponse);
+        detectorId = updateResponseBody.get("_id").toString();
 
         hits = executeSearch(Detector.DETECTORS_INDEX, request);
         hit = hits.get(0);
         detectorAsMap = (Map<String, Object>) hit.getSourceAsMap().get("detector");
         monitorIds = (List<String>) (detectorAsMap).get("monitor_id");
-        Assert.assertEquals(2, monitorIds.size());
-        indexDoc(index, "1", randomDoc(2, 4));
-        indexDoc(index, "2", randomDoc(3, 4));
 
+        assertEquals(2, monitorIds.size());
 
+        indexDoc(index, "1", randomDoc(2, 4, "Info"));
+        indexDoc(index, "2", randomDoc(3, 4, "Info"));
+
+        // Execute two bucket level monitors
         for(String id: monitorIds){
             monitorType  = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + id))).get("monitor")).get("monitor_type");
             Assert.assertEquals(MonitorType.BUCKET_LEVEL_MONITOR.getValue(), monitorType);
@@ -143,15 +141,20 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         Map<String, Object> getFindingsBody = entityAsMap(getFindingsResponse);
 
         assertNotNull(getFindingsBody);
-        Assert.assertEquals(2, getFindingsBody.get("total_findings"));
+        assertEquals(2, getFindingsBody.get("total_findings"));
 
-        List<String> docIds = ((ArrayList)((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("related_doc_ids"));
-
-        assertTrue(Arrays.asList("1", "2").containsAll(docIds));
+        List<Map<String, Object>> findings = (List)getFindingsBody.get("findings");
+        for(Map<String, Object> finding : findings) {
+            List<String> findingDocs = (List<String>)finding.get("related_doc_ids");
+            Assert.assertEquals(2, findingDocs.size());
+            assertTrue(Arrays.asList("1", "2").containsAll(findingDocs));
+        }
 
         String findingDetectorId = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
-
         assertEquals(detectorId, findingDetectorId);
+
+        String findingIndex = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("index").toString();
+        assertEquals(index, findingIndex);
     }
 
     /**
@@ -161,7 +164,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
      * 4. Verifies the findings
      * @throws IOException
      */
-    public void testUpdateDetectorAddingDocRuleRemovingAggRule() throws IOException {
+    public void testReplaceAggregationRuleWithDocRule_verifyFindings_success() throws IOException {
         String index = createTestIndex(randomIndex(), windowsIndexMapping());
 
         // Execute CreateMappingsAction to add alias mapping for index
@@ -175,23 +178,20 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         );
 
         Response createMappingResponse = client().performRequest(createMappingRequest);
+
         assertEquals(HttpStatus.SC_OK, createMappingResponse.getStatusLine().getStatusCode());
 
         String maxRuleId = createRule(randomAggregationRule( "max", " > 2"));
         List<DetectorRule> detectorRules = List.of(new DetectorRule(maxRuleId));
-
         DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
             Collections.emptyList());
-
         Detector detector = randomDetectorWithInputs(List.of(input));
-
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
-        Assert.assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
+
+        assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
 
         Map<String, Object> responseBody = asMap(createResponse);
-
         String detectorId = responseBody.get("_id").toString();
-
         String request = "{\n" +
             "   \"query\" : {\n" +
             "     \"match_all\":{\n" +
@@ -199,7 +199,8 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
             "   }\n" +
             "}";
         SearchResponse response = executeSearchAndGetResponse(Rule.CUSTOM_RULES_INDEX, request, true);
-        Assert.assertEquals(1, response.getHits().getTotalHits().value);
+
+        assertEquals(1, response.getHits().getTotalHits().value);
 
         request = "{\n" +
             "   \"query\" : {\n" +
@@ -208,7 +209,6 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
             "     }\n" +
             "   }\n" +
             "}";
-
         // Verify that one bucket level monitor is created
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
@@ -216,36 +216,35 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         String monitorId = ((List<String>) (detectorAsMap).get("monitor_id")).get(0);
 
         String monitorType  = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId))).get("monitor")).get("monitor_type");
-        Assert.assertEquals(MonitorType.BUCKET_LEVEL_MONITOR.getValue(), monitorType);
 
-        // Create random doc rule and 5 pre packed rules and assign to detector
+        assertEquals(MonitorType.BUCKET_LEVEL_MONITOR.getValue(), monitorType);
+
+        // Create random doc rule and 5 pre-packed rules and assign to detector
         String randomDocRuleId = createRule(randomRule());
-
         input = new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(randomDocRuleId)),
             getRandomPrePackagedRules().stream().map(DetectorRule::new).collect(Collectors.toList()));
         Detector updatedDetector = randomDetectorWithInputs(List.of(input));
 
         Response updateResponse = makeRequest(client(), "PUT", SecurityAnalyticsPlugin.DETECTOR_BASE_URI + "/" + detectorId, Collections.emptyMap(), toHttpEntity(updatedDetector));
-        Assert.assertEquals("Update detector failed", RestStatus.OK, restStatus(updateResponse));
+
+        assertEquals("Update detector failed", RestStatus.OK, restStatus(updateResponse));
+
         Map updateResponseBody = asMap(updateResponse);
         detectorId = updateResponseBody.get("_id").toString();
-
-        request = "{\n" +
-            "   \"query\" : {\n" +
-            "     \"match\":{\n" +
-            "        \"_id\": \"" + detectorId + "\"\n" +
-            "     }\n" +
-            "   }\n" +
-            "}";
 
         // Verify newly created doc level monitor
         hits = executeSearch(Detector.DETECTORS_INDEX, request);
         hit = hits.get(0);
         detectorAsMap = (Map<String, Object>) hit.getSourceAsMap().get("detector");
-        monitorId = ((List<String>) (detectorAsMap).get("monitor_id")).get(0);
+        List<String> monitorIds = ((List<String>) (detectorAsMap).get("monitor_id"));
 
+        assertEquals(1, monitorIds.size());
+
+        monitorId = monitorIds.get(0);
         monitorType  = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId))).get("monitor")).get("monitor_type");
-        Assert.assertEquals(MonitorType.DOC_LEVEL_MONITOR.getValue(), monitorType);
+
+        assertEquals(MonitorType.DOC_LEVEL_MONITOR.getValue(), monitorType);
+
         // Verify rules
         request = "{\n" +
             "   \"query\" : {\n" +
@@ -254,30 +253,125 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
             "   }\n" +
             "}";
         response = executeSearchAndGetResponse(DetectorMonitorConfig.getRuleIndex(randomDetectorType()), request, true);
-        Assert.assertEquals(6, response.getHits().getTotalHits().value);
 
-        response = executeSearchAndGetResponse(Rule.CUSTOM_RULES_INDEX, request, true);
-        // Two custom rules - one agg and one doc level
-        Assert.assertEquals(2, response.getHits().getTotalHits().value);
+        assertEquals(6, response.getHits().getTotalHits().value);
 
         // Verify findings
-        indexDoc(index, "1", randomDoc(2, 5));
-        indexDoc(index, "2", randomDoc(3, 5));
+        indexDoc(index, "1", randomDoc(2, 5, "Info"));
+        indexDoc(index, "2", randomDoc(3, 5, "Info"));
 
         Response executeResponse = executeAlertingMonitor(monitorId, Collections.emptyMap());
         Map<String, Object> executeResults = entityAsMap(executeResponse);
         int noOfSigmaRuleMatches = ((List<Map<String, Object>>) ((Map<String, Object>) executeResults.get("input_results")).get("results")).get(0).size();
-        // 5 prepackaged and one custom rule
-        Assert.assertEquals(6, noOfSigmaRuleMatches);
+        // 5 prepackaged and 1 custom doc level rule
+        assertEquals(6, noOfSigmaRuleMatches);
+
+        Map<String, String> params = new HashMap<>();
+        params.put("detector_id", detectorId);
+        Response getFindingsResponse = makeRequest(client(), "GET", SecurityAnalyticsPlugin.FINDINGS_BASE_URI + "/_search", params, null);
+        Map<String, Object> getFindingsBody = entityAsMap(getFindingsResponse);
+
+        assertNotNull(getFindingsBody);
+        // When doc level monitor is being applied one finding is generated per document
+        assertEquals(2, getFindingsBody.get("total_findings"));
+
+        List<Map<String, Object>> findings = (List)getFindingsBody.get("findings");
+        List<String> foundDocIds = new ArrayList<>();
+        for(Map<String, Object> finding : findings) {
+            List<String> findingDocs = (List<String>)finding.get("related_doc_ids");
+            Assert.assertEquals(1, findingDocs.size());
+            foundDocIds.addAll(findingDocs);
+        }
+        assertTrue(Arrays.asList("1", "2").containsAll(foundDocIds));
     }
 
     /**
-     * 1. Creates detector with no rules
-     * 2. Removes all doc level rules and tries to save a detector without monitor
-     * 4. Verifies the findings
+     * 1. Creates detector with prepackaged doc rules
+     * 2. Verifies that detector with doc level monitor is created
+     * 3. Removes all rules and updates detector
+     * 4. Verifies that detector doesn't have monitors attached
+     *
      * @throws IOException
      */
-    public void testCreateDetectorWithoutRules() throws IOException {
+    public void testRemoveAllRulesAndUpdateDetector_success() throws IOException {
+        String index = createTestIndex(randomIndex(), windowsIndexMapping());
+
+        // Execute CreateMappingsAction to add alias mapping for index
+        Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
+        // both req params and req body are supported
+        createMappingRequest.setJsonEntity(
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
+        );
+        Response createMappingResponse = client().performRequest(createMappingRequest);
+
+        assertEquals(HttpStatus.SC_OK, createMappingResponse.getStatusLine().getStatusCode());
+
+        List<String> randomPrepackagedRules = getRandomPrePackagedRules();
+        Detector detector = randomDetector(randomPrepackagedRules);
+        Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
+
+        assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
+
+        Map<String, Object> responseBody = asMap(createResponse);
+        String detectorId = responseBody.get("_id").toString();
+        String request = "{\n" +
+            "   \"query\" : {\n" +
+            "     \"match_all\":{\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
+        SearchResponse response = executeSearchAndGetResponse(DetectorMonitorConfig.getRuleIndex(randomDetectorType()), request, true);
+
+        assertEquals(randomPrepackagedRules.size(), response.getHits().getTotalHits().value);
+
+        request = "{\n" +
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + detectorId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
+        // Verify that one doc level monitor is created
+        List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
+        SearchHit hit = hits.get(0);
+        Map<String, Object> detectorAsMap = (Map<String, Object>) hit.getSourceAsMap().get("detector");
+        List<String> monitorIds = ((List<String>) (detectorAsMap).get("monitor_id"));
+
+        assertEquals(1, monitorIds.size());
+
+        String monitorId = monitorIds.get(0);
+        String monitorType  = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId))).get("monitor")).get("monitor_type");
+
+        assertEquals(MonitorType.DOC_LEVEL_MONITOR.getValue(), monitorType);
+
+        Detector updatedDetector = randomDetector(Collections.emptyList());
+        Response updateResponse = makeRequest(client(), "PUT", SecurityAnalyticsPlugin.DETECTOR_BASE_URI + "/" + detectorId, Collections.emptyMap(), toHttpEntity(updatedDetector));
+
+        assertEquals("Update detector failed", RestStatus.OK, restStatus(updateResponse));
+
+        Map<String, Object> updateResponseBody = asMap(updateResponse);
+        detectorId = updateResponseBody.get("_id").toString();
+
+        hits = executeSearch(Detector.DETECTORS_INDEX, request);
+        hit = hits.get(0);
+        detectorAsMap = (Map<String, Object>) hit.getSourceAsMap().get("detector");
+
+        assertTrue(((List<String>) (detectorAsMap).get("monitor_id")).isEmpty());
+    }
+
+    /**
+     * 1. Creates detector with aggregation rule
+     * 2. Adds new aggregation rule
+     * 3. Updates a detector
+     * 4. Verifies that detector has 2 custom rules attached
+     * 5. Execute monitors and verifies findings
+     *
+     * @throws IOException
+     */
+    public void testAddNewAggregationRule_verifyFindings_success() throws IOException {
         String index = createTestIndex(randomIndex(), windowsIndexMapping());
 
         // Execute CreateMappingsAction to add alias mapping for index
@@ -291,18 +385,439 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         );
 
         Response createMappingResponse = client().performRequest(createMappingRequest);
+
         assertEquals(HttpStatus.SC_OK, createMappingResponse.getStatusLine().getStatusCode());
 
-        Detector detector = randomDetector(Collections.emptyList());
-
+        String sumRuleId = createRule(randomAggregationRule("sum", " > 1"));
+        List<DetectorRule> detectorRules = List.of(new DetectorRule(sumRuleId));
+        DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
+            Collections.emptyList());
+        Detector detector = randomDetectorWithInputs(List.of(input));
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
-        Assert.assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
+
+        assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
 
         Map<String, Object> responseBody = asMap(createResponse);
-
         String detectorId = responseBody.get("_id").toString();
+        String  request = "{\n" +
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + detectorId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
 
-        // Verify rules
+        List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
+        SearchHit hit = hits.get(0);
+        Map<String, List> detectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
+        List inputArr = detectorMap.get("inputs");
+
+        assertEquals(1, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
+
+        // Test adding the new max monitor and updating the existing sum monitor
+        String maxRuleId =  createRule(randomAggregationRule("max", " > 3"));
+        DetectorInput newInput = new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(maxRuleId), new DetectorRule(sumRuleId)),
+            Collections.emptyList());
+        Detector updatedDetector = randomDetectorWithInputs(List.of(newInput));
+        Response updateResponse = makeRequest(client(), "PUT", SecurityAnalyticsPlugin.DETECTOR_BASE_URI + "/" + detectorId, Collections.emptyMap(), toHttpEntity(updatedDetector));
+
+        assertEquals("Update detector failed", RestStatus.OK, restStatus(updateResponse));
+
+        hits = executeSearch(Detector.DETECTORS_INDEX, request);
+        hit = hits.get(0);
+        Map<String, List> updatedDetectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
+        inputArr = updatedDetectorMap.get("inputs");
+
+        assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
+
+        List<String> monitorIds = ((List<String>) (updatedDetectorMap).get("monitor_id"));
+
+        assertEquals(2, monitorIds.size());
+
+        indexDoc(index, "1", randomDoc(2, 4, "Info"));
+        indexDoc(index, "2", randomDoc(3, 4, "Info"));
+
+        for(String monitorId: monitorIds) {
+            Map<String, String> monitor  = (Map<String, String>)(entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
+            assertEquals(MonitorType.BUCKET_LEVEL_MONITOR.getValue(), monitor.get("monitor_type"));
+            executeAlertingMonitor(monitorId, Collections.emptyMap());
+        }
+
+        Map<String, String> params = new HashMap<>();
+        params.put("detector_id", detectorId);
+        Response getFindingsResponse = makeRequest(client(), "GET", SecurityAnalyticsPlugin.FINDINGS_BASE_URI + "/_search", params, null);
+        Map<String, Object> getFindingsBody = entityAsMap(getFindingsResponse);
+
+        assertNotNull(getFindingsBody);
+        // Two bucket monitors are executed and only one finding is generated since maxRule is not fulfilling the trigger condition
+        assertEquals(1, getFindingsBody.get("total_findings"));
+
+        List<String> findingDocs = ((List<String>)((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("related_doc_ids"));
+
+        assertEquals(2, findingDocs.size());
+        assertTrue(Arrays.asList("1", "2").containsAll(findingDocs));
+
+        String findingDetectorId = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
+        assertEquals(detectorId, findingDetectorId);
+
+        String findingIndex = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("index").toString();
+        assertEquals(index, findingIndex);
+    }
+
+    /**
+     * 1. Creates detector with 2 aggregation rule assigned
+     * 2. Verifies that 2 custom rules exists
+     * 3. Removes one rule and updates a detector
+     * 4. Verifies that detector has only one custom rule and one bucket level monitor
+     *
+     * @throws IOException
+     */
+    public void testDeleteAggregationRule_verifyFindings_success() throws IOException {
+        String index = createTestIndex(randomIndex(), windowsIndexMapping());
+        // Execute CreateMappingsAction to add alias mapping for index
+        Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
+        // both req params and req body are supported
+        createMappingRequest.setJsonEntity(
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
+        );
+
+        Response createMappingResponse = client().performRequest(createMappingRequest);
+
+        assertEquals(HttpStatus.SC_OK, createMappingResponse.getStatusLine().getStatusCode());
+
+        List<String> aggRuleIds = new ArrayList<>();
+        aggRuleIds.add(createRule(randomAggregationRule("avg", " > 1")));
+        aggRuleIds.add(createRule(randomAggregationRule("count", " > 1")));
+
+        List<DetectorRule> detectorRules = aggRuleIds.stream().map(DetectorRule::new).collect(Collectors.toList());
+        DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
+            Collections.emptyList());
+        Detector detector = randomDetectorWithInputs(List.of(input));
+        Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
+
+        assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
+
+        Map<String, Object> responseBody = asMap(createResponse);
+        String detectorId = responseBody.get("_id").toString();
+        String  request = "{\n" +
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + detectorId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
+
+        List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
+        SearchHit hit = hits.get(0);
+        Map<String, List> detectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
+        List inputArr = detectorMap.get("inputs");
+
+        assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
+
+        // Test deleting the aggregation rule
+        DetectorInput newInput = new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(aggRuleIds.get(0))),
+            Collections.emptyList());
+        detector = randomDetectorWithInputs(List.of(newInput));
+        Response updateResponse = makeRequest(client(), "PUT", SecurityAnalyticsPlugin.DETECTOR_BASE_URI + "/" + detectorId, Collections.emptyMap(), toHttpEntity(detector));
+
+        assertEquals("Update detector failed", RestStatus.OK, restStatus(updateResponse));
+
+        hits = executeSearch(Detector.DETECTORS_INDEX, request);
+        hit = hits.get(0);
+        Map<String, List> updatedDetectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
+        inputArr = updatedDetectorMap.get("inputs");
+
+        assertEquals(1, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
+
+        inputArr = updatedDetectorMap.get("inputs");
+
+        assertEquals(1, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
+
+        // Verify monitors
+        List<String> monitorIds = ((List<String>) (updatedDetectorMap).get("monitor_id"));
+
+        assertEquals(1, monitorIds.size());
+
+        Map<String, String> monitor  = (Map<String, String>)(entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorIds.get(0))))).get("monitor");
+
+        assertEquals(MonitorType.BUCKET_LEVEL_MONITOR.getValue(), monitor.get("monitor_type"));
+
+        indexDoc(index, "1", randomDoc(2, 4, "Info"));
+        indexDoc(index, "2", randomDoc(3, 4, "Info"));
+        indexDoc(index, "3", randomDoc(3, 4, "Test"));
+        executeAlertingMonitor(monitorIds.get(0), Collections.emptyMap());
+
+        Map<String, String> params = new HashMap<>();
+        params.put("detector_id", detectorId);
+        Response getFindingsResponse = makeRequest(client(), "GET", SecurityAnalyticsPlugin.FINDINGS_BASE_URI + "/_search", params, null);
+        Map<String, Object> getFindingsBody = entityAsMap(getFindingsResponse);
+
+        assertNotNull(getFindingsBody);
+        // Two bucket monitors are executed and only one finding is generated since maxRule is not fulfilling the trigger condition
+        assertEquals(1, getFindingsBody.get("total_findings"));
+
+        List<String> findingDocs = ((List<String>)((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("related_doc_ids"));
+        // Matches two findings because of the opCode rule uses (Info)
+        assertEquals(2, findingDocs.size());
+        assertTrue(Arrays.asList("1", "2").containsAll(findingDocs));
+
+        String findingDetectorId = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
+        assertEquals(detectorId, findingDetectorId);
+
+        String findingIndex = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("index").toString();
+        assertEquals(index, findingIndex);
+    }
+
+    /**
+     * 1. Creates detector with 2 aggregation and prepackaged doc level rules
+     * 2. Replaces one aggregation rule with a new one
+     * 3. Verifies that number of rules is unchanged
+     * 4. Verifies monitor types
+     * 5. Verifies findings
+     * @throws IOException
+     */
+    public void testReplaceAggregationRule_verifyFindings_success() throws IOException {
+        String index = createTestIndex(randomIndex(), windowsIndexMapping());
+        // Execute CreateMappingsAction to add alias mapping for index
+        Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
+        // both req params and req body are supported
+        createMappingRequest.setJsonEntity(
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
+        );
+
+        Response createMappingResponse = client().performRequest(createMappingRequest);
+        assertEquals(HttpStatus.SC_OK, createMappingResponse.getStatusLine().getStatusCode());
+
+        List<String> aggRuleIds = new ArrayList<>();
+        aggRuleIds.add(createRule(randomAggregationRule("avg", " > 1")));
+        aggRuleIds.add(createRule(randomAggregationRule("min", " > 1")));
+        List<DetectorRule> detectorRules = aggRuleIds.stream().map(DetectorRule::new).collect(Collectors.toList());
+        List<String> prepackagedDocRules = getRandomPrePackagedRules();
+
+        DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
+            prepackagedDocRules.stream().map(DetectorRule::new).collect(Collectors.toList()));
+        Detector detector = randomDetectorWithInputs(List.of(input));
+        Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
+
+        assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
+
+        Map<String, Object> responseBody = asMap(createResponse);
+        String detectorId = responseBody.get("_id").toString();
+        String  request = "{\n" +
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + detectorId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
+
+        List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
+        SearchHit hit = hits.get(0);
+        Map<String, List> detectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
+        List inputArr = detectorMap.get("inputs");
+
+        assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
+
+        String maxRuleId = createRule(randomAggregationRule("max", " > 2"));
+        DetectorInput newInput = new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(aggRuleIds.get(0)), new DetectorRule(maxRuleId)),
+            getRandomPrePackagedRules().stream().map(DetectorRule::new).collect(Collectors.toList()));
+        detector = randomDetectorWithInputs(List.of(newInput));
+        createResponse = makeRequest(client(), "PUT", SecurityAnalyticsPlugin.DETECTOR_BASE_URI + "/" + detectorId, Collections.emptyMap(), toHttpEntity(detector));
+
+        assertEquals("Update detector failed", RestStatus.OK, restStatus(createResponse));
+
+        hits = executeSearch(Detector.DETECTORS_INDEX, request);
+        hit = hits.get(0);
+        Map<String, List> updatedDetectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
+        inputArr = updatedDetectorMap.get("inputs");
+
+        assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
+
+        List<String> monitorIds = ((List<String>) (updatedDetectorMap).get("monitor_id"));
+
+        assertEquals(3, monitorIds.size());
+
+        indexDoc(index, "1", randomDoc(2, 4, "Info"));
+        indexDoc(index, "2", randomDoc(3, 4, "Info"));
+        indexDoc(index, "3", randomDoc(3, 4, "Test"));
+        Map<String, Integer> numberOfMonitorTypes = new HashMap<>();
+        for(String monitorId: monitorIds) {
+            Map<String, String> monitor  = (Map<String, String>)(entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
+            numberOfMonitorTypes.merge(monitor.get("monitor_type"), 1, Integer::sum);
+            executeAlertingMonitor(monitorId, Collections.emptyMap());
+        }
+
+        assertEquals(2, numberOfMonitorTypes.get(MonitorType.BUCKET_LEVEL_MONITOR.getValue()).intValue());
+        assertEquals(1, numberOfMonitorTypes.get(MonitorType.DOC_LEVEL_MONITOR.getValue()).intValue());
+        // Verify findings
+        Map<String, String> params = new HashMap<>();
+        params.put("detector_id", detectorId);
+        Response getFindingsResponse = makeRequest(client(), "GET", SecurityAnalyticsPlugin.FINDINGS_BASE_URI + "/_search", params, null);
+        Map<String, Object> getFindingsBody = entityAsMap(getFindingsResponse);
+
+        assertNotNull(getFindingsBody);
+        assertEquals(5, getFindingsBody.get("total_findings"));
+
+        List<String> docLevelFinding = new ArrayList<>();
+        List<Map<String, Object>> findings = (List)getFindingsBody.get("findings");
+        Set<String> docLevelRules = new HashSet<>(prepackagedDocRules);
+
+        for(Map<String, Object> finding : findings) {
+            List<Map<String, Object>> queries = (List<Map<String, Object>>)finding.get("queries");
+            if(!(queries).isEmpty()) {
+                for(Map<String, Object> query: queries) {
+                    String ruleId = query.get("id").toString();
+                    assertTrue(docLevelRules.contains(ruleId));
+                }
+                docLevelFinding.addAll((List<String>)finding.get("related_doc_ids"));
+            } else {
+                // Verify bucket level finding
+                List<String> findingDocs = (List<String>)finding.get("related_doc_ids");
+                Assert.assertEquals(2, findingDocs.size());
+                assertTrue(Arrays.asList("1", "2").containsAll(findingDocs));
+            }
+        }
+        // Verify doc level finding
+        assertTrue(Arrays.asList("1", "2", "3").containsAll(docLevelFinding));
+
+        String findingDetectorId = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
+        assertEquals(detectorId, findingDetectorId);
+
+        String findingIndex = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("index").toString();
+        assertEquals(index, findingIndex);
+    }
+
+    public void testMinAggregationRule_findingSuccess() throws IOException {
+        String index = createTestIndex(randomIndex(), windowsIndexMapping());
+        // Execute CreateMappingsAction to add alias mapping for index
+        Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
+        // both req params and req body are supported
+        createMappingRequest.setJsonEntity(
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
+        );
+
+        Response createMappingResponse = client().performRequest(createMappingRequest);
+        assertEquals(HttpStatus.SC_OK, createMappingResponse.getStatusLine().getStatusCode());
+
+        List<String> aggRuleIds = new ArrayList<>();
+        String testOpCode = "Test";
+        aggRuleIds.add(createRule(randomAggregationRule("min", " > 3", testOpCode)));
+        List<DetectorRule> detectorRules = aggRuleIds.stream().map(DetectorRule::new).collect(Collectors.toList());
+        DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
+            Collections.emptyList());
+        Detector detector = randomDetectorWithInputs(List.of(input));
+        Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
+
+        assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
+
+        Map<String, Object> responseBody = asMap(createResponse);
+        String detectorId = responseBody.get("_id").toString();
+        String  request = "{\n" +
+            "   \"query\" : {\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + detectorId + "\"\n" +
+            "     }\n" +
+            "   }\n" +
+            "}";
+
+        List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
+        SearchHit hit = hits.get(0);
+        Map<String, List> detectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
+
+        List<String> monitorIds = ((List<String>) (detectorMap).get("monitor_id"));
+
+        indexDoc(index, "4", randomDoc(5, 3, testOpCode));
+        indexDoc(index, "5", randomDoc(2, 3, testOpCode));
+        indexDoc(index, "6", randomDoc(4, 3, testOpCode));
+        indexDoc(index, "7", randomDoc(6, 2, testOpCode));
+        indexDoc(index, "8", randomDoc(1, 1, testOpCode));
+
+        Map<String, Integer> numberOfMonitorTypes = new HashMap<>();
+        for(String monitorId: monitorIds) {
+            Map<String, String> monitor  = (Map<String, String>)(entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
+            numberOfMonitorTypes.merge(monitor.get("monitor_type"), 1, Integer::sum);
+            executeAlertingMonitor(monitorId, Collections.emptyMap());
+        }
+
+        // Verify findings
+        Map<String, String> params = new HashMap<>();
+        params.put("detector_id", detectorId);
+        Response getFindingsResponse = makeRequest(client(), "GET", SecurityAnalyticsPlugin.FINDINGS_BASE_URI + "/_search", params, null);
+        Map<String, Object> getFindingsBody = entityAsMap(getFindingsResponse);
+
+        assertNotNull(getFindingsBody);
+
+        List<Map<String, Object>> findings = (List)getFindingsBody.get("findings");
+        for(Map<String, Object> finding : findings) {
+            List<String> findingDocs = (List<String>)finding.get("related_doc_ids");
+            Assert.assertEquals(1, findingDocs.size());
+            assertTrue(Arrays.asList("7").containsAll(findingDocs));
+        }
+
+        String findingDetectorId = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
+        assertEquals(detectorId, findingDetectorId);
+
+        String findingIndex = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("index").toString();
+        assertEquals(index, findingIndex);
+    }
+
+
+    /**
+     * 1. Creates detector with aggregation and prepackaged rules
+     * (sum rule - should match docIds: 1, 2, 3; maxRule - 4, 5, 6, 7; minRule - 7)
+     * 2. Verifies monitor execution
+     * 3. Verifies findings
+     *
+     * @throws IOException
+     */
+    public void testMultipleAggregationAndDocRules_findingSuccess() throws IOException {
+        String index = createTestIndex(randomIndex(), windowsIndexMapping());
+
+        // Execute CreateMappingsAction to add alias mapping for index
+        Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
+        // both req params and req body are supported
+        createMappingRequest.setJsonEntity(
+            "{ \"index_name\":\"" + index + "\"," +
+                "  \"rule_topic\":\"" + randomDetectorType() + "\", " +
+                "  \"partial\":true" +
+                "}"
+        );
+
+        Response createMappingResponse = client().performRequest(createMappingRequest);
+
+        assertEquals(HttpStatus.SC_OK, createMappingResponse.getStatusLine().getStatusCode());
+
+        String infoOpCode = "Info";
+        String testOpCode = "Test";
+
+        // 5 custom aggregation rules
+        String sumRuleId = createRule(randomAggregationRule("sum", " > 1", infoOpCode));
+        String maxRuleId =  createRule(randomAggregationRule("max", " > 3", testOpCode));
+        String minRuleId =  createRule(randomAggregationRule("min", " > 3", testOpCode));
+        String avgRuleId =  createRule(randomAggregationRule("avg", " > 3", infoOpCode));
+        String cntRuleId =  createRule(randomAggregationRule("count", " > 3", "randomTestCode"));
+        List<String> aggRuleIds = List.of(sumRuleId, maxRuleId);
+        String randomDocRuleId = createRule(randomRule());
+        List<String> prepackagedRules = getRandomPrePackagedRules();
+
+        List<DetectorRule> detectorRules = List.of(new DetectorRule(sumRuleId), new DetectorRule(maxRuleId), new DetectorRule(minRuleId),
+            new DetectorRule(avgRuleId), new DetectorRule(cntRuleId), new DetectorRule(randomDocRuleId));
+
+        DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
+            prepackagedRules.stream().map(DetectorRule::new).collect(Collectors.toList()));
+        Detector detector = randomDetectorWithInputs(List.of(input));
+
+        Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
+
         String request = "{\n" +
             "   \"query\" : {\n" +
             "     \"match_all\":{\n" +
@@ -310,195 +825,134 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
             "   }\n" +
             "}";
         SearchResponse response = executeSearchAndGetResponse(DetectorMonitorConfig.getRuleIndex(randomDetectorType()), request, true);
-        Assert.assertEquals(0, response.getHits().getTotalHits().value);
 
-        String createdId = responseBody.get("_id").toString();
-        int createdVersion = Integer.parseInt(responseBody.get("_version").toString());
-        Assert.assertNotEquals("response is missing Id", Detector.NO_ID, createdId);
-        Assert.assertTrue("incorrect version", createdVersion > 0);
-        Assert.assertEquals("Incorrect Location header", String.format(Locale.getDefault(), "%s/%s", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, createdId), createResponse.getHeader("Location"));
-        Assert.assertFalse(((Map<String, Object>) responseBody.get("detector")).containsKey("rule_topic_index"));
-        Assert.assertFalse(((Map<String, Object>) responseBody.get("detector")).containsKey("findings_index"));
-        Assert.assertFalse(((Map<String, Object>) responseBody.get("detector")).containsKey("alert_index"));
-    }
+        assertEquals(6, response.getHits().getTotalHits().value);
 
-    public void testUpdateDetectorAddingNewAggregationRule() throws IOException {
-        String index = createTestIndex(randomIndex(), productIndexMapping());
-
-        // Execute CreateMappingsAction to add alias mapping for index
-        Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
-        // both req params and req body are supported
-        createMappingRequest.setJsonEntity(
-            "{ \"index_name\":\"" + index + "\"," +
-                "  \"rule_topic\":\"windows\", " +
-                "  \"partial\":true" +
-                "}"
-        );
-
-        Response createMappingResponse = client().performRequest(createMappingRequest);
-        assertEquals(HttpStatus.SC_OK, createMappingResponse.getStatusLine().getStatusCode());
-
-        String sumRuleId = createRule(sumAggregationTestRule());
-        List<DetectorRule> detectorRules = List.of(new DetectorRule(sumRuleId));
-
-        DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
-            Collections.emptyList());
-
-        Detector detector = randomDetectorWithInputs(List.of(input));
-
-        Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
-        Assert.assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
-
+        assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
         Map<String, Object> responseBody = asMap(createResponse);
-
         String detectorId = responseBody.get("_id").toString();
-
-        String request = "{\n" +
-            "   \"query\" : {\n" +
-            "     \"match_all\":{\n" +
-            "     }\n" +
-            "   }\n" +
-            "}";
-        SearchResponse response = executeSearchAndGetResponse(Rule.CUSTOM_RULES_INDEX, request, true);
-        Assert.assertEquals(1, response.getHits().getTotalHits().value);
-
-        // Test adding the new max monitor and updating the existing sum monitor
-        String maxRuleId =  createRule(productIndexMaxAggRule());
-        DetectorInput newInput = new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(maxRuleId), new DetectorRule(sumRuleId)),
-            Collections.emptyList());
-        Detector firstUpdatedDetector = randomDetectorWithInputs(List.of(newInput));
-        Response updateResponse = makeRequest(client(), "PUT", SecurityAnalyticsPlugin.DETECTOR_BASE_URI + "/" + detectorId, Collections.emptyMap(), toHttpEntity(firstUpdatedDetector));
-        Assert.assertEquals("Update detector failed", RestStatus.OK, restStatus(updateResponse));
         request = "{\n" +
             "   \"query\" : {\n" +
-            "     \"match_all\":{\n" +
+            "     \"match\":{\n" +
+            "        \"_id\": \"" + detectorId + "\"\n" +
             "     }\n" +
             "   }\n" +
             "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
-        Map<String, List> firstUpdateDetectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
-        List inputArr = firstUpdateDetectorMap.get("inputs");
-        Assert.assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
+        Map<String, List> updatedDetectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
+        List inputArr = updatedDetectorMap.get("inputs");
+
+        assertEquals(6, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
+
+        List<String> monitorIds = ((List<String>) (updatedDetectorMap).get("monitor_id"));
+
+        assertEquals(6, monitorIds.size());
+
+        indexDoc(index, "1", randomDoc(2, 4, infoOpCode));
+        indexDoc(index, "2", randomDoc(3, 4, infoOpCode));
+        indexDoc(index, "3", randomDoc(1, 4, infoOpCode));
+        indexDoc(index, "4", randomDoc(5, 3, testOpCode));
+        indexDoc(index, "5", randomDoc(2, 3, testOpCode));
+        indexDoc(index, "6", randomDoc(4, 3, testOpCode));
+        indexDoc(index, "7", randomDoc(6, 2, testOpCode));
+        indexDoc(index, "8", randomDoc(1, 1, testOpCode));
+
+        Map<String, Integer> numberOfMonitorTypes = new HashMap<>();
+
+        for(String monitorId: monitorIds) {
+            Map<String, String> monitor  = (Map<String, String>)(entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
+            numberOfMonitorTypes.merge(monitor.get("monitor_type"), 1, Integer::sum);
+            Response executeResponse = executeAlertingMonitor(monitorId, Collections.emptyMap());
+
+            // Assert monitor executions
+            Map<String, Object> executeResults = entityAsMap(executeResponse);
+            if(monitor.get("monitor_type").equals(MonitorType.DOC_LEVEL_MONITOR.getValue())) {
+                int noOfSigmaRuleMatches = ((List<Map<String, Object>>) ((Map<String, Object>) executeResults.get("input_results")).get("results")).get(0).size();
+                // 5 prepackaged and 1 custom doc level rule
+                assertEquals(6, noOfSigmaRuleMatches);
+            } else {
+                for(String ruleId: aggRuleIds) {
+                    Object rule = (((Map<String,Object>)((Map<String, Object>)((List<Object>)((Map<String, Object>)executeResults.get("input_results")).get("results")).get(0)).get("aggregations")).get(ruleId));
+                    if(rule != null) {
+                        if(ruleId == sumRuleId) {
+                            assertRuleMonitorFinding(executeResults, ruleId,3, List.of("4"));
+                        } else if (ruleId == maxRuleId) {
+                            assertRuleMonitorFinding(executeResults, ruleId,5, List.of("2", "3"));
+                        }
+                        else if (ruleId == minRuleId) {
+                            assertRuleMonitorFinding(executeResults, ruleId,1,  List.of("2"));
+                        }
+                    }
+                }
+            }
+        }
+
+        assertEquals(5, numberOfMonitorTypes.get(MonitorType.BUCKET_LEVEL_MONITOR.getValue()).intValue());
+        assertEquals(1, numberOfMonitorTypes.get(MonitorType.DOC_LEVEL_MONITOR.getValue()).intValue());
+
+        Map<String, String> params = new HashMap<>();
+        params.put("detector_id", detectorId);
+        Response getFindingsResponse = makeRequest(client(), "GET", SecurityAnalyticsPlugin.FINDINGS_BASE_URI + "/_search", params, null);
+        Map<String, Object> getFindingsBody = entityAsMap(getFindingsResponse);
+
+        // Assert findings
+        assertNotNull(getFindingsBody);
+        // 8 findings from doc level rules, and 3 findings for aggregation (sum, max and min)
+        assertEquals(11, getFindingsBody.get("total_findings"));
+
+        List<String> docLevelFinding = new ArrayList<>();
+        Map<String, Integer> numberOfDocOccasionInBucketLevelFinding = new HashMap<>();
+        List<Map<String, Object>> findings = (List)getFindingsBody.get("findings");
+
+        Set<String> docLevelRules = new HashSet<>(prepackagedRules);
+        docLevelRules.add(randomDocRuleId);
+
+        for(Map<String, Object> finding : findings) {
+            // ((List<Map<String, Object>)finding.get("queries")).get(0).get("id")
+            List<Map<String, Object>> queries = (List<Map<String, Object>>)finding.get("queries");
+
+            if(!queries.isEmpty()) {
+                // Verify for each doc level finding that doc level queries in finding contain all doc level rules
+                for(Map<String, Object> query: queries) {
+                    String ruleId = query.get("id").toString();
+                    assertTrue(docLevelRules.contains(ruleId));
+                }
+                docLevelFinding.addAll((List<String>)finding.get("related_doc_ids"));
+            } else {
+                List<String> findingDocs = (List<String>)finding.get("related_doc_ids");
+                for(String docId: findingDocs) {
+                    numberOfDocOccasionInBucketLevelFinding.merge(docId, 1, Integer::sum);
+                }
+            }
+        }
+
+        assertTrue(Arrays.asList("1", "2", "3", "4", "5", "6", "7", "8").containsAll(docLevelFinding));
+        // Verify number of doc occasions
+        // Monitor created based on sum rule matches: 1, 2, 3 docs
+        assertEquals(1, numberOfDocOccasionInBucketLevelFinding.get("1").intValue());
+        assertEquals(1, numberOfDocOccasionInBucketLevelFinding.get("2").intValue());
+        assertEquals(1, numberOfDocOccasionInBucketLevelFinding.get("3").intValue());
+        // Monitor created based on max rule matches: 4, 5, 6, 7 docs
+        assertEquals(1, numberOfDocOccasionInBucketLevelFinding.get("4").intValue());
+        assertEquals(1, numberOfDocOccasionInBucketLevelFinding.get("5").intValue());
+        assertEquals(1, numberOfDocOccasionInBucketLevelFinding.get("6").intValue());
+        // Monitor created based on max and min rule matches: 7 docs
+        assertEquals(2, numberOfDocOccasionInBucketLevelFinding.get("7").intValue());
+
+        String findingDetectorId = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
+        assertEquals(detectorId, findingDetectorId);
+
+        String findingIndex = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("index").toString();
+        assertEquals(index, findingIndex);
     }
 
-    public void testUpdateDetectorDeletingExistingAggregationRule() throws IOException {
-        String index = createTestIndex(randomIndex(), productIndexMapping());
+    private static void assertRuleMonitorFinding(Map<String, Object> executeResults, String ruleId,  int expectedDocCount, List<String> expectedTriggerResult) {
+        List<Map<String, Object>> buckets = ((List<Map<String, Object>>)(((Map<String, Object>)((Map<String, Object>)((Map<String, Object>)((List<Object>)((Map<String, Object>) executeResults.get("input_results")).get("results")).get(0)).get("aggregations")).get("result_agg")).get("buckets")));
+        Integer docCount = buckets.stream().mapToInt(it -> (Integer)it.get("doc_count")).sum();
+        assertEquals(expectedDocCount, docCount.intValue());
 
-        // Execute CreateMappingsAction to add alias mapping for index
-        Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
-        // both req params and req body are supported
-        createMappingRequest.setJsonEntity(
-            "{ \"index_name\":\"" + index + "\"," +
-                "  \"rule_topic\":\"windows\", " +
-                "  \"partial\":true" +
-                "}"
-        );
-
-        Response createMappingResponse = client().performRequest(createMappingRequest);
-        assertEquals(HttpStatus.SC_OK, createMappingResponse.getStatusLine().getStatusCode());
-
-        List<String> aggRuleIds = createAggregationRules();
-        List<DetectorRule> detectorRules = aggRuleIds.stream().map(DetectorRule::new).collect(Collectors.toList());
-
-        DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
-            Collections.emptyList());
-
-        Detector detector = randomDetectorWithInputs(List.of(input));
-
-        Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
-        Assert.assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
-
-        Map<String, Object> responseBody = asMap(createResponse);
-
-        String detectorId = responseBody.get("_id").toString();
-
-        String request = "{\n" +
-            "   \"query\" : {\n" +
-            "     \"match_all\":{\n" +
-            "     }\n" +
-            "   }\n" +
-            "}";
-        SearchResponse response = executeSearchAndGetResponse(Rule.CUSTOM_RULES_INDEX, request, true);
-        Assert.assertEquals(2, response.getHits().getTotalHits().value);
-
-        // Test deleting the aggregation rule
-        DetectorInput newInput = new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(aggRuleIds.get(0))),
-            Collections.emptyList());
-        Detector firstUpdatedDetector = randomDetectorWithInputs(List.of(newInput));
-        Response updateResponse = makeRequest(client(), "PUT", SecurityAnalyticsPlugin.DETECTOR_BASE_URI + "/" + detectorId, Collections.emptyMap(), toHttpEntity(firstUpdatedDetector));
-        Assert.assertEquals("Update detector failed", RestStatus.OK, restStatus(updateResponse));
-        request = "{\n" +
-            "   \"query\" : {\n" +
-            "     \"match_all\":{\n" +
-            "     }\n" +
-            "   }\n" +
-            "}";
-        List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
-        SearchHit hit = hits.get(0);
-        Map<String, List> firstUpdateDetectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
-        List inputArr = firstUpdateDetectorMap.get("inputs");
-        Assert.assertEquals(1, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
-    }
-
-    public void testUpdateDetectorWithAggregationAndDocLevelRules() throws IOException {
-        String index = createTestIndex(randomIndex(), productIndexMapping());
-
-        // Execute CreateMappingsAction to add alias mapping for index
-        Request createMappingRequest = new Request("POST", SecurityAnalyticsPlugin.MAPPER_BASE_URI);
-        // both req params and req body are supported
-        createMappingRequest.setJsonEntity(
-            "{ \"index_name\":\"" + index + "\"," +
-                "  \"rule_topic\":\"windows\", " +
-                "  \"partial\":true" +
-                "}"
-        );
-
-        Response createMappingResponse = client().performRequest(createMappingRequest);
-        assertEquals(HttpStatus.SC_OK, createMappingResponse.getStatusLine().getStatusCode());
-
-        List<String> aggRuleIds = createAggregationRules();
-        List<DetectorRule> detectorRules = aggRuleIds.stream().map(DetectorRule::new).collect(Collectors.toList());
-
-        DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
-            getRandomPrePackagedRules().stream().map(DetectorRule::new).collect(Collectors.toList()));
-
-        Detector detector = randomDetectorWithInputs(List.of(input));
-
-        Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
-        Assert.assertEquals("Create detector failed", RestStatus.CREATED, restStatus(createResponse));
-
-        Map<String, Object> responseBody = asMap(createResponse);
-
-        String detectorId = responseBody.get("_id").toString();
-
-        String request = "{\n" +
-            "   \"query\" : {\n" +
-            "     \"match_all\":{\n" +
-            "     }\n" +
-            "   }\n" +
-            "}";
-        SearchResponse response = executeSearchAndGetResponse(Rule.CUSTOM_RULES_INDEX, request, true);
-        Assert.assertEquals(2, response.getHits().getTotalHits().value);
-
-        String maxRuleId = createRule(productIndexMaxAggRule());
-
-        DetectorInput newInput = new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(aggRuleIds.get(0)), new DetectorRule(maxRuleId)),
-            Collections.emptyList());
-
-        detector = randomDetectorWithInputs(List.of(newInput));
-        createResponse = makeRequest(client(), "PUT", SecurityAnalyticsPlugin.DETECTOR_BASE_URI + "/" + detectorId, Collections.emptyMap(), toHttpEntity(detector));
-        Assert.assertEquals("Update detector failed", RestStatus.OK, restStatus(createResponse));
-        request = "{\n" +
-            "   \"query\" : {\n" +
-            "     \"match_all\":{\n" +
-            "     }\n" +
-            "   }\n" +
-            "}";
-        List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
-        SearchHit hit = hits.get(0);
-        Map<String, List> firstUpdateDetectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
-        List inputArr = firstUpdateDetectorMap.get("inputs");
-        Assert.assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
+        List<String> triggerResultBucketKeys = ((Map<String, Object>)((Map<String, Object>) ((Map<String, Object>)executeResults.get("trigger_results")).get(ruleId)).get("agg_result_buckets")).keySet().stream().collect(Collectors.toList());
+        assertEquals(expectedTriggerResult, triggerResultBucketKeys);
     }
 }
